force-app/main/default/objects/AI_Workspace_User__c/AI_Workspace_User__c.object-meta.xml
<CustomObject>
    <label>AI Workspace User</label>
    <nameField>
        <label>Workspace User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workspace Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>