force-app/main/default/objects/AI_Workspace_User__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>OAuth access token for the workspace provider (Outlook/Gmail). This token is used for API calls and expires after a short period.</description>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>