force-app/main/default/objects/AI_Workspace_User__c/fields/Auto_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sync_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this user is included in automatic workspace sync operations. When disabled, the scheduler will skip syncing emails, calendars, and tasks for this user.</description>
    <label>Auto Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>