force-app/main/default/objects/AI_Workspace_User__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Email provider type (Outlook, Gmail, etc.)</description>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Gmail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>