force-app/main/default/objects/AI_Workspace_User__c/fields/Service_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_User_Email__c</fullName>
    <description>Email address of the user connected to the workspace service (Outlook/Gmail)</description>
    <label>Service User Email</label>
    <type>Email</type>
</CustomField>